dodanie uslugi wyszukujacej klientow, generatora iban oraz uslugi dla obcokrajowcow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 spring.datasource.url=jdbc:postgresql://localhost:5432/banking
 spring.datasource.username=banking
 spring.datasource.password=banking
+spring.jpa.show-sql=true
