--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/banking
 spring.datasource.username=banking
 spring.datasource.password=banking
 spring.jpa.show-sql=true
+
+banking.maxCreditCardAmount = 1
